Fixed banner alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ main {
 .cards {
     display: grid;
     /* grid-template-columns: repeat(4, 1fr); */
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
     grid-gap: 2rem;
     margin-top: 1rem;
 }
@@ -322,10 +322,9 @@ td .status {
 
 .process-card {
     justify-content: center;
-    display: flex;
-    margin-left: 3rem;
-    width: 110%;
-    height: 170px;
+    display: grid;
+    width: 100%;
+    height: 140px;
 }
 
 .card {
